# octomap_to_planning_scene

./: CMakeLists.txt  README.md  dnl_ctomap.sh  octomap_loader.cpp  octomap_params.sh  octomap_to_planning_scene.cpp  shape_guesser.py  tf_and_octomap_to_octomap.cpp  transform_guesser.py
data/bigman/: bigman.srdf
